--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,7 +85,7 @@ input, select, textarea {
 	html {
 		background-color: #313a3d;
 		background-attachment: fixed,						fixed;
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+		background-image: url("images/overlay.png"), url("../../images/bg.png");
 		background-position: top left,					center center;
 		background-repeat: repeat,						none;
 		background-size: auto,						cover;
@@ -1981,7 +1981,7 @@ input, select, textarea {
 	}
 
 	label {
-		color: #61686b;
+		color: #467192;
 		display: block;
 		font-size: 0.9em;
 		font-weight: 700;
@@ -2075,7 +2075,7 @@ input, select, textarea {
 		input[type="checkbox"] + label,
 		input[type="radio"] + label {
 			text-decoration: none;
-			color: #6f7577;
+			color: #467192;
 			cursor: pointer;
 			display: inline-block;
 			font-size: 1em;
@@ -2123,7 +2123,7 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			box-shadow: inset 0 0 0 2px #8cd1a8;
+			box-shadow: inset 0 0 0 2px #467192;
 		}
 
 	input[type="radio"] + label:before {
@@ -2579,7 +2579,7 @@ input, select, textarea {
 		border-radius: 0;
 		border: 0;
 		box-shadow: inset 0 0 0 2px #dddddd;
-		color: #61686b !important;
+		color: #467192 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 700;
@@ -2599,7 +2599,7 @@ input, select, textarea {
 		button:hover,
 		.button:hover {
 			background-color: rgba(144, 144, 144, 0.075);
-			color: #61686b !important;
+			color: #467192 !important;
 		}
 
 		input[type="submit"]:active,
@@ -2608,7 +2608,7 @@ input, select, textarea {
 		button:active,
 		.button:active {
 			background-color: rgba(144, 144, 144, 0.15);
-			color: #61686b !important;
+			color: #467192 !important;
 		}
 
 		input[type="submit"].icon,
@@ -2657,7 +2657,7 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #8cd1a8;
+			background-color: #467192; /* Primary button color */
 			border: 0;
 			box-shadow: none;
 			color: #ffffff !important;
@@ -2668,7 +2668,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #9ed8b6;
+				background-color: #1A4560; /* Hover button color */
 			}
 
 			input[type="submit"].primary:active,
@@ -2676,7 +2676,7 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #7aca9a;
+				background-color: #467192;
 			}
 
 			input[type="submit"].primary.icon:before,
@@ -2696,7 +2696,7 @@ input, select, textarea {
 		button:disabled,
 		.button.disabled,
 		.button:disabled {
-			background-color: #6f7577 !important;
+			background-color: #467192 !important;
 			box-shadow: none !important;
 			color: #fff !important;
 			cursor: default;
